# oa

./: .gitignore  Cargo.toml
examples/: de.rs
src/: lib.rs  utils.rs
src/v2/: mod.rs  swagger.rs
src/v3/: callback.rs  components.rs  contact.rs  discriminator.rs  encoding.rs  example.rs  external_documentation.rs  header.rs  info.rs  license.rs  link.rs  media_type.rs  mod.rs  oauth_flow.rs  oauth_flows.rs  openapi.rs  operation.rs  parameter.rs  path_item.rs  paths.rs  reference.rs  request_body.rs  response.rs  responses.rs  schema.rs  security_requiriment.rs  security_scheme.rs  server.rs  server_variable.rs  tag.rs  xml.rs
