[package]
name = "oa"
version = "0.1.0"
authors = ["Federico Morrone <contact@morrone.dev>"]
edition = "2018"

[dependencies]
http = "0.2.4"
indexmap = { version = "1.7.0", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.42"
serde_yaml = "0.8.17"