[package]
name = "oa"
version = "0.1.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "openapi"

[dependencies]
http = "0.2.4"
indexmap = { version = "1.7.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.43"
serde_yaml = "0.8.21"
